--- a/Website/src/pages/styles.css
+++ b/Website/src/pages/styles.css
@@ -54,10 +54,10 @@
     
   }
   
-  /* Add more CSS rules for the remaining elements */
+  
 
 .container {
-    width:auto;
+    width: auto;
     height: auto;
     background-color: #ffffff;
     font-family: SF Pro;
@@ -77,7 +77,6 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 24px;
     
   }
@@ -216,27 +215,41 @@
   }
 
 .sub-content {
-  background-color: #fff;
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   width: 1350px;
   height: 630px;
   flex-direction: column;
   line-height: normal;
   display: flex;
   width: 1280px;
-  align-items: flex-start;
   flex-direction: column;
   gap: 32px;
+  justify-content: center;
+  
+ 
+  
 }
 
+/* .destination-subcontent {
+  border: 10px solid brown;
+  display: inline-flex;
+  width: auto;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 48px;
+  flex-wrap: wrap;
+  grid-template-columns: repeat(3, 1fr);
+} */
+
 .subcontent-title {
-  display: flex;
+  display: in;
   align-items: flex-start;
   gap: 473px;
+  
 
 }
 .content-title2{
@@ -247,6 +260,7 @@
   font-weight: 600;
   line-height: normal;
   gap: 473px;
+  margin-top: 100px;
 }
 .view-all-link {
   color: black;
@@ -259,8 +273,9 @@
 .featured-destination{
   display: flex;
   align-items: flex-start;
+  max-width: 1280px;
   gap: 32px;
-  justify-content: center;
+  border: 10px solid blue;
 }
 
 .destination-image{
@@ -364,4 +379,23 @@
   background: var(--primary-50, #F9F5FF);
   color: var(--primary-700, #6941C6);
   border-radius: 16px;
+}
+
+.location-container{
+
+}
+
+.location-title {
+
+}
+
+.location-details{
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--gray-600, #475467);
 }
