--- a/Website/src/pages/styles.css
+++ b/Website/src/pages/styles.css
@@ -261,7 +261,7 @@
   font-weight: 600;
   line-height: normal;
   gap: 473px;
-  margin-top: 100px;
+  margin-top: 200px;
 }
 .view-all-link {
   color: black;
@@ -403,7 +403,6 @@
 
 .details-container {
   margin-top: 30px;
-  border: 2px solid blue;
 }
 
 .star-container {
@@ -418,4 +417,41 @@
 
 .star.filled {
   color: #f39c12; /* Yellow star color */
+}
+
+
+.modal-hotelname {
+  display: flex;
+  align-items: center;
+  gap: 70px;
+  font-size: 20px;
+  font-weight: 600;
+  padding-bottom: 10px;
+
+}
+.top-reviewers{
+  max-width:1500 ;
+  gap: 500px;
+}
+.reviews {
+  width: 1149px;
+  display: flex;
+  align-items: center;
+  gap: 200px;
+  font-size: 16px;
+  font-weight: 700;
+
+}
+.modal-hotelamenities{
+  font-size: 14px;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+.review-words{
+  font-size: 14px;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+.modal-details{
+  gap: 30px;
 }
