--- a/Website/src/pages/styles.css
+++ b/Website/src/pages/styles.css
@@ -247,9 +247,10 @@
 } */
 
 .subcontent-title {
-  display: in;
+  display: flex;
   align-items: flex-start;
-  gap: 473px;
+  gap: 400px;
+  margin-top: 100px;
   
 
 }
@@ -261,7 +262,6 @@
   font-weight: 600;
   line-height: normal;
   gap: 473px;
-  margin-top: 200px;
 }
 .view-all-link {
   color: black;
@@ -269,7 +269,6 @@
   font-weight: 500;
   line-height: normal;
   text-decoration: underline;
-  word-wrap: break-word;
 }
 .featured-destination{
   display: flex;
@@ -423,7 +422,7 @@
 .modal-hotelname {
   display: flex;
   align-items: center;
-  gap: 70px;
+  gap: 350px;
   font-size: 20px;
   font-weight: 600;
   padding-bottom: 10px;
@@ -437,7 +436,7 @@
   width: 1149px;
   display: flex;
   align-items: center;
-  gap: 200px;
+  gap: 400px;
   font-size: 16px;
   font-weight: 700;
 
@@ -454,4 +453,17 @@
 }
 .modal-details{
   gap: 30px;
+}
+
+.modal-button{
+  width: 750px;
+  display: flex;
+  justify-content: center;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #000000;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
 }
