Made changes to allow the images and description read directly from the csv file as opposed to static data, styled the destination details page to be more intuitive based on the usability testing

--- a/Website/src/pages/styles.css
+++ b/Website/src/pages/styles.css
@@ -468,3 +468,12 @@
   margin-top: 10px;
   border: 1px solid var(--black, #000);
 }
+.card-body{
+  height: 150px; 
+  overflow: hidden;
+}
+
+.interest-text{
+  color: green;
+  font-weight: 700;
+}
